<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="8dp"
        android:paddingEnd="20dp"
        android:paddingBottom="4dp">

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_diving_fish_username"
            android:inputType="text"
            android:singleLine="true" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/hint_diving_fish_password"
            android:singleLine="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_diving_fish_difficulties"
            android:textSize="14sp" />

        <CheckBox
            android:id="@+id/diffBasic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score_level_basic" />

        <CheckBox
            android:id="@+id/diffAdvanced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score_level_advanced" />

        <CheckBox
            android:id="@+id/diffExpert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/score_level_expert" />

        <CheckBox
            android:id="@+id/diffMaster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/score_level_master" />

        <CheckBox
            android:id="@+id/diffRemaster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/score_level_remaster" />
    </LinearLayout>
</ScrollView>
